objects/AttendeePaidHistory__c.object
<CustomObject>
    <fields>
        <fullName>APH_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APH_PaymentType__c</fullName>
        <label>PaymentType</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AS_id__c</fullName>
        <label>AttendeeSummary</label>
        <referenceTo>AttendeeSummary__c</referenceTo>
        <relationshipLabel>AttendeePaidHistory</relationshipLabel>
        <relationshipName>AttendeePaidHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EV_id__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>AttendeePaidHistory</relationshipLabel>
        <relationshipName>AttendeePaidHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TT_id__c</fullName>
        <label>TicketTypes</label>
        <referenceTo>TicketTypes__c</referenceTo>
        <relationshipLabel>AttendeePaidHistory</relationshipLabel>
        <relationshipName>AttendeePaidHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AttendeePaidHistory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APH_{0000000}</displayFormat>
        <label>AttendeePaidHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AttendeePaidHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>